<resources>
    <string name="app_name">同步音乐播放器</string>

    <string name="allowPermissionSuccessful">授权成功！</string>
    <string name="allowPermissionFail">授权失败，请手动允许权限！</string>
    <string name="authorizationTitle">用户授权</string>
    <string name="allow">同意并授权</string>
    <string name="disAllow">退出软件</string>
    <string name="displaySet">显示设置</string>
    <string name="closeStatus">关闭通知栏遮罩</string>
    <string name="closeStatusSummary">关闭通知栏遮罩以修复显示异常的问题。</string>
    <string name="closeNavigation">关闭导航栏遮罩</string>
    <string name="closeNavigationSummary">关闭导航栏遮罩以修复显示异常的问题。</string>
    <string name="serverStatus">服务器状态：%s</string>
    <string name="playList">播放列表</string>
    <string name="serverConfig">服务器配置</string>
    <string name="clientConfig">客户端管理</string>
    <string name="menuOther">其他选项</string>
    <string name="menuClient">客户端模式</string>
    <string name="menuSetting">系统设置</string>
    <string name="menuAbout">关于</string>
    <string name="menuExit">退出</string>
    <string name="navigation_drawer_open">打开</string>
    <string name="navigation_drawer_close">关闭</string>
    <string name="noWorking">未开启</string>
    <string name="songList">创建的歌单（%d）</string>
    <string name="playListHeadLocalSong">本地音乐(%d)</string>
    <string name="playListHeadHistory">最近播放(%d)</string>
    <string name="playListHeadLike">我喜欢的(%d)</string>
    <string name="set">设置</string>
    <string name="songListItemSize">%d首歌曲</string>
    <string name="save">保存</string>
    <string name="delete">删除</string>
    <string name="listArrImage">歌单封面</string>
    <string name="imageShowError">图片加载失败</string>
    <string name="listArrTitle">歌单标题</string>
    <string name="Crack">各位大爷手下留情</string>
    <string name="SoftError">软件发生数据库错误</string>
    <string name="createNewSongList">建立新歌单</string>
    <string name="edit">修改</string>
    <string name="delete_message">确定删除%s?它将永久的消失！</string>
    <string name="ok">确定</string>
    <string name="exit">取消</string>
    <string name="save_message">确定保存%s?</string>
    <string name="save_error">请输入正确的数据！</string>
    <string name="editSongList">修改 %s</string>
    <string name="localMusic">本地音乐</string>
    <string name="allMusic">单曲</string>
    <string name="singer">歌手</string>
    <string name="folder">文件夹</string>
    <string name="album">专辑</string>
    <string name="importMusic">导入歌单</string>
    <string name="searchMusic">添加音乐</string>
    <string name="useOtherEngine">使用第三方工具读取歌曲信息</string>
    <string name="lessThan60">不扫描小于60s的歌曲</string>
    <string name="traverFolder">使用深度搜索(beta)</string>
    <string name="search">搜索</string>
    <string name="blackList">黑名单设置</string>
    <string name="load">正在加载 ...</string>
    <string name="chooseAll">全部选择</string>
    <string name="saveAll">保存全部</string>
    <string name="saveChoose">保存选择</string>
    <string name="save_success">保存成功！</string>

    <string-array name="authorizationMessageArray">
        <item>为了能够更好的使用此软件，我们需要以下权限：</item>
        <item>+ 读取、写入SD卡</item>
        <item>+ 访问网络</item>
        <item>+ 获取网络环境信息</item>
        <item>+ 开放端口与其他设备通信</item>
        <item>+ 工作时常驻后台</item>
        <item>+ 推送通知</item>
        <item> </item>
        <item>注意：如果未授权，程序可能发生未知错误！</item>

    </string-array>
    <string-array name="defaultBlackList">
        <item>%s/Android</item>
        <item>%s/Tencent</item>
        <item>%s/Pictures</item>
        <item>%s/Miui</item>
        <item>%s/DICM</item>
    </string-array>
</resources>
