<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@android:color/white"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:theme="@style/AppTheme.AppBarOverlay"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"/>

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/searchConfig"
            tools:context=".activity.MusicSearchActivity">

        <CheckBox
                android:text="@string/useOtherEngine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@+id/lessThan60"
                android:id="@+id/engine"
                app:layout_constraintBottom_toTopOf="@+id/lessThan60"
                android:layout_marginBottom="32dp"/>

        <CheckBox
                android:text="@string/lessThan60"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lessThan60"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                app:layout_constraintHorizontal_bias="0.28"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.45"/>

        <CheckBox
                android:text="@string/traverFolder"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/lessThan60"
                app:layout_constraintStart_toStartOf="@+id/lessThan60"
                android:id="@+id/traverFolder"
                app:layout_constraintEnd_toEndOf="@+id/engine"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"/>

        <Button
                android:text="@string/search"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/search"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                style="@style/Button"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/traverFolder"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
                android:text="@string/blackList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/blackList"
                android:padding="10dp"
                android:textColor="?attr/colorAccent"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/search"
                app:layout_constraintEnd_toEndOf="@+id/search"
                />

    </android.support.constraint.ConstraintLayout>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".activity.MusicSearchActivity">

        <ListView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/selectList"/>


        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/loadView"
                android:background="#FFF"
                android:layout_centerInParent="true"
                tools:context=".activity.MusicSearchActivity">

            <ProgressBar
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:id="@+id/progressBar2"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    app:layout_constraintVertical_bias="0.442"/>

            <TextView
                    android:text="@string/load"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="@+id/progressBar2"
                    app:layout_constraintEnd_toEndOf="@+id/progressBar2"
                    android:id="@+id/textView6"
                    android:textSize="18sp"
                    android:layout_marginTop="32dp"
                    app:layout_constraintTop_toBottomOf="@+id/progressBar2"/>

            <TextView
                    android:text="logcat"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:id="@+id/logcat"
                    app:layout_constraintBottom_toBottomOf="parent"
                    />
        </android.support.constraint.ConstraintLayout>
    </RelativeLayout>
</LinearLayout>
