<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFF"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".activity.ConfigSongListActivity">

    <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:theme="@style/AppTheme.AppBarOverlay"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    <TextView
            android:text="@string/save"
            android:padding="10dp"
            android:textColor="#FFF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/saveBtn"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/toolbar"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/toolbar"
            app:layout_constraintTop_toTopOf="@+id/toolbar"/>

    <TextView
            android:text="@string/delete"
            android:padding="10dp"
            android:textColor="#FFF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/deleteBtn"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/toolbar"
            app:layout_constraintTop_toTopOf="@+id/toolbar"
            app:layout_constraintEnd_toStartOf="@+id/saveBtn"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"/>

    <android.support.constraint.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="@+id/scrollView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <TextView
                android:text="@string/listArrImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:textSize="16sp"
                android:id="@+id/textView"
                app:layout_constraintTop_toTopOf="@+id/listArrImg"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                app:layout_constraintBottom_toBottomOf="@+id/listArrImg"/>

        <TextView
                android:text="@string/listArrTitle"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:textColor="#000"
                android:textSize="16sp"
                android:id="@+id/textView4"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                app:layout_constraintTop_toBottomOf="@+id/line1"
                android:layout_marginTop="16dp"/>

        <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/img_draw"
                android:layout_marginRight="16dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/imageShowError"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/listArrImg"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="16dp"/>

        <TextView
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="#DDD"
                android:id="@+id/line1"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/listArrImg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                />

        <TextView
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="#DDD"
                android:id="@+id/line2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                android:layout_marginTop="16dp"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/listTitle"
                app:layout_constraintTop_toTopOf="@+id/textView4"
                app:layout_constraintBottom_toBottomOf="@+id/textView4"
                app:layout_constraintStart_toEndOf="@+id/textView4"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="@+id/listArrImg"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                app:layout_constraintHorizontal_bias="1.0"/>

        <Button
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/imgBtn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginBottom="8dp"
                android:background="@android:color/transparent"
                app:layout_constraintBottom_toBottomOf="@+id/line1"/>

        <Button
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:id="@+id/titleBtn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:background="@android:color/transparent"
                app:layout_constraintBottom_toBottomOf="@+id/line2"
                app:layout_constraintTop_toBottomOf="@+id/line1"/>
    </android.support.constraint.ConstraintLayout>

    <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/scrollView2">

    </ScrollView>

</android.support.constraint.ConstraintLayout>